modificando logo y tipografia

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,21 @@
       rel="stylesheet"
     /> -->
 
+    <!-- <link
+      rel="preload"
+      href="assets/fonts/Ripple-Heavy.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    /> -->
+    <link
+      rel="preload"
+      href="Ripple-Bold.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"
